// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsView should render check for updates completed, with everything up to date 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  >
    <div
      class="with-scrollbar"
    >
      <div
        class="content-container"
      >
        <div
          class="settings-pane-container"
        >
          <div
            class="tw-mt-4 tw-border tw-border-solid tw-border-black/10 tw-bg-white tw-p-5 first:tw-mt-0"
          >
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <h5
                  class="tw-mb-3 tw-font-normal"
                >
                  Updates
                </h5>
              </div>
              <div
                class="tw-w-auto tw-flex-none tw-px-4"
              >
                <button
                  class="btn btn-outline-primary"
                  type="button"
                >
                  Check for updates
                </button>
              </div>
            </div>
            <p
              class="small text-muted"
            />
            <div
              class="toggle"
            >
              <label
                for="checkForUpdates"
              >
                <span
                  class="toggle-label"
                >
                  Check for updates at startup
                </span>
                <div
                  class="toggle-bar toggle-bar-primary-toggled"
                >
                  <input
                    aria-checked="true"
                    checked=""
                    id="checkForUpdates"
                    type="checkbox"
                  />
                  <span
                    class="toggle-handle toggle-handle-toggled toggle-handle-primary-toggled"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="tw-mt-4 tw-border tw-border-solid tw-border-black/10 tw-bg-white tw-p-5 first:tw-mt-0"
          >
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <h5
                  class="tw-mb-3 tw-font-normal"
                >
                  Usage statistics
                </h5>
              </div>
            </div>
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <div
                  class="toggle"
                >
                  <label
                    for="checkForShare"
                  >
                    <span
                      class="toggle-label"
                    >
                      Collect anonymous usage data
                    </span>
                    <div
                      class="toggle-bar toggle-bar-primary"
                    >
                      <input
                        aria-checked="false"
                        id="checkForShare"
                        type="checkbox"
                      />
                      <span
                        class="toggle-handle toggle-handle-primary"
                        style="background-color: white;"
                      />
                    </div>
                  </label>
                </div>
              </div>
              <div
                class="tw-w-auto tw-flex-none tw-px-4"
              >
                <button
                  class="btn btn-outline-primary"
                  type="button"
                >
                  Show agreement
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade dialog  modal show"
    data-focus-visible-added=""
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="tw-flex tw-flex-row"
          >
            <b>
              Update check completed
            </b>
          </div>
        </div>
        <div
          class="tw-select-text modal-body"
        >
          All apps are up to date.
        </div>
        <div
          class="tw-preflight tw-flex tw-flex-row-reverse tw-justify-start tw-gap-2 tw-border-none tw-p-4 modal-footer"
        >
          <button
            class="tw-preflight tw-h-8 tw-px-4 tw-text-sm tw-border tw-border-gray-700 tw-bg-white tw-text-gray-700 active:enabled:tw-bg-gray-50 "
            type="button"
          >
            Got it
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SettingsView should render check for updates completed, with updates available 1`] = `
<body
  class="modal-open"
  style="padding-right: 0px;"
>
  <div
    aria-hidden="true"
  >
    <div
      class="with-scrollbar"
    >
      <div
        class="content-container"
      >
        <div
          class="settings-pane-container"
        >
          <div
            class="tw-mt-4 tw-border tw-border-solid tw-border-black/10 tw-bg-white tw-p-5 first:tw-mt-0"
          >
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <h5
                  class="tw-mb-3 tw-font-normal"
                >
                  Updates
                </h5>
              </div>
              <div
                class="tw-w-auto tw-flex-none tw-px-4"
              >
                <button
                  class="btn btn-outline-primary"
                  type="button"
                >
                  Check for updates
                </button>
              </div>
            </div>
            <p
              class="small text-muted"
            />
            <div
              class="toggle"
            >
              <label
                for="checkForUpdates"
              >
                <span
                  class="toggle-label"
                >
                  Check for updates at startup
                </span>
                <div
                  class="toggle-bar toggle-bar-primary-toggled"
                >
                  <input
                    aria-checked="true"
                    checked=""
                    id="checkForUpdates"
                    type="checkbox"
                  />
                  <span
                    class="toggle-handle toggle-handle-toggled toggle-handle-primary-toggled"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="tw-mt-4 tw-border tw-border-solid tw-border-black/10 tw-bg-white tw-p-5 first:tw-mt-0"
          >
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <h5
                  class="tw-mb-3 tw-font-normal"
                >
                  Usage statistics
                </h5>
              </div>
            </div>
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <div
                  class="toggle"
                >
                  <label
                    for="checkForShare"
                  >
                    <span
                      class="toggle-label"
                    >
                      Collect anonymous usage data
                    </span>
                    <div
                      class="toggle-bar toggle-bar-primary"
                    >
                      <input
                        aria-checked="false"
                        id="checkForShare"
                        type="checkbox"
                      />
                      <span
                        class="toggle-handle toggle-handle-primary"
                        style="background-color: white;"
                      />
                    </div>
                  </label>
                </div>
              </div>
              <div
                class="tw-w-auto tw-flex-none tw-px-4"
              >
                <button
                  class="btn btn-outline-primary"
                  type="button"
                >
                  Show agreement
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="fade modal-backdrop show"
  />
  <div
    aria-modal="true"
    class="fade dialog  modal show"
    data-focus-visible-added=""
    role="dialog"
    style="display: block;"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-dialog-centered"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="tw-flex tw-flex-row"
          >
            <b>
              Update check completed
            </b>
          </div>
        </div>
        <div
          class="tw-select-text modal-body"
        >
          One or more updates are available. Go to the apps screen to update.
        </div>
        <div
          class="tw-preflight tw-flex tw-flex-row-reverse tw-justify-start tw-gap-2 tw-border-none tw-p-4 modal-footer"
        >
          <button
            class="tw-preflight tw-h-8 tw-px-4 tw-text-sm tw-border tw-border-gray-700 tw-bg-white tw-text-gray-700 active:enabled:tw-bg-gray-50 "
            type="button"
          >
            Got it
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SettingsView should render when checking for updates 1`] = `
<body>
  <div>
    <div
      class="with-scrollbar"
    >
      <div
        class="content-container"
      >
        <div
          class="settings-pane-container"
        >
          <div
            class="tw-mt-4 tw-border tw-border-solid tw-border-black/10 tw-bg-white tw-p-5 first:tw-mt-0"
          >
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <h5
                  class="tw-mb-3 tw-font-normal"
                >
                  Updates
                </h5>
              </div>
              <div
                class="tw-w-auto tw-flex-none tw-px-4"
              >
                <button
                  class="btn btn-outline-primary"
                  disabled=""
                  type="button"
                >
                  Checking...
                </button>
              </div>
            </div>
            <p
              class="small text-muted"
            />
            <div
              class="toggle"
            >
              <label
                for="checkForUpdates"
              >
                <span
                  class="toggle-label"
                >
                  Check for updates at startup
                </span>
                <div
                  class="toggle-bar toggle-bar-primary-toggled"
                >
                  <input
                    aria-checked="true"
                    checked=""
                    id="checkForUpdates"
                    type="checkbox"
                  />
                  <span
                    class="toggle-handle toggle-handle-toggled toggle-handle-primary-toggled"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="tw-mt-4 tw-border tw-border-solid tw-border-black/10 tw-bg-white tw-p-5 first:tw-mt-0"
          >
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <h5
                  class="tw-mb-3 tw-font-normal"
                >
                  Usage statistics
                </h5>
              </div>
            </div>
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <div
                  class="toggle"
                >
                  <label
                    for="checkForShare"
                  >
                    <span
                      class="toggle-label"
                    >
                      Collect anonymous usage data
                    </span>
                    <div
                      class="toggle-bar toggle-bar-primary"
                    >
                      <input
                        aria-checked="false"
                        id="checkForShare"
                        type="checkbox"
                      />
                      <span
                        class="toggle-handle toggle-handle-primary"
                        style="background-color: white;"
                      />
                    </div>
                  </label>
                </div>
              </div>
              <div
                class="tw-w-auto tw-flex-none tw-px-4"
              >
                <button
                  class="btn btn-outline-primary"
                  type="button"
                >
                  Show agreement
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SettingsView should render with check for updates disabled 1`] = `
<body>
  <div>
    <div
      class="with-scrollbar"
    >
      <div
        class="content-container"
      >
        <div
          class="settings-pane-container"
        >
          <div
            class="tw-mt-4 tw-border tw-border-solid tw-border-black/10 tw-bg-white tw-p-5 first:tw-mt-0"
          >
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <h5
                  class="tw-mb-3 tw-font-normal"
                >
                  Updates
                </h5>
              </div>
              <div
                class="tw-w-auto tw-flex-none tw-px-4"
              >
                <button
                  class="btn btn-outline-primary"
                  type="button"
                >
                  Check for updates
                </button>
              </div>
            </div>
            <p
              class="small text-muted"
            />
            <div
              class="toggle"
            >
              <label
                for="checkForUpdates"
              >
                <span
                  class="toggle-label"
                >
                  Check for updates at startup
                </span>
                <div
                  class="toggle-bar toggle-bar-primary"
                >
                  <input
                    aria-checked="false"
                    id="checkForUpdates"
                    type="checkbox"
                  />
                  <span
                    class="toggle-handle toggle-handle-primary"
                    style="background-color: white;"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="tw-mt-4 tw-border tw-border-solid tw-border-black/10 tw-bg-white tw-p-5 first:tw-mt-0"
          >
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <h5
                  class="tw-mb-3 tw-font-normal"
                >
                  Usage statistics
                </h5>
              </div>
            </div>
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <div
                  class="toggle"
                >
                  <label
                    for="checkForShare"
                  >
                    <span
                      class="toggle-label"
                    >
                      Collect anonymous usage data
                    </span>
                    <div
                      class="toggle-bar toggle-bar-primary"
                    >
                      <input
                        aria-checked="false"
                        id="checkForShare"
                        type="checkbox"
                      />
                      <span
                        class="toggle-handle toggle-handle-primary"
                        style="background-color: white;"
                      />
                    </div>
                  </label>
                </div>
              </div>
              <div
                class="tw-w-auto tw-flex-none tw-px-4"
              >
                <button
                  class="btn btn-outline-primary"
                  type="button"
                >
                  Show agreement
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SettingsView should render with check for updates enabled 1`] = `
<body>
  <div>
    <div
      class="with-scrollbar"
    >
      <div
        class="content-container"
      >
        <div
          class="settings-pane-container"
        >
          <div
            class="tw-mt-4 tw-border tw-border-solid tw-border-black/10 tw-bg-white tw-p-5 first:tw-mt-0"
          >
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <h5
                  class="tw-mb-3 tw-font-normal"
                >
                  Updates
                </h5>
              </div>
              <div
                class="tw-w-auto tw-flex-none tw-px-4"
              >
                <button
                  class="btn btn-outline-primary"
                  type="button"
                >
                  Check for updates
                </button>
              </div>
            </div>
            <p
              class="small text-muted"
            />
            <div
              class="toggle"
            >
              <label
                for="checkForUpdates"
              >
                <span
                  class="toggle-label"
                >
                  Check for updates at startup
                </span>
                <div
                  class="toggle-bar toggle-bar-primary-toggled"
                >
                  <input
                    aria-checked="true"
                    checked=""
                    id="checkForUpdates"
                    type="checkbox"
                  />
                  <span
                    class="toggle-handle toggle-handle-toggled toggle-handle-primary-toggled"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="tw-mt-4 tw-border tw-border-solid tw-border-black/10 tw-bg-white tw-p-5 first:tw-mt-0"
          >
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <h5
                  class="tw-mb-3 tw-font-normal"
                >
                  Usage statistics
                </h5>
              </div>
            </div>
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <div
                  class="toggle"
                >
                  <label
                    for="checkForShare"
                  >
                    <span
                      class="toggle-label"
                    >
                      Collect anonymous usage data
                    </span>
                    <div
                      class="toggle-bar toggle-bar-primary"
                    >
                      <input
                        aria-checked="false"
                        id="checkForShare"
                        type="checkbox"
                      />
                      <span
                        class="toggle-handle toggle-handle-primary"
                        style="background-color: white;"
                      />
                    </div>
                  </label>
                </div>
              </div>
              <div
                class="tw-w-auto tw-flex-none tw-px-4"
              >
                <button
                  class="btn btn-outline-primary"
                  type="button"
                >
                  Show agreement
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SettingsView should render with last update check date 1`] = `
<body>
  <div>
    <div
      class="with-scrollbar"
    >
      <div
        class="content-container"
      >
        <div
          class="settings-pane-container"
        >
          <div
            class="tw-mt-4 tw-border tw-border-solid tw-border-black/10 tw-bg-white tw-p-5 first:tw-mt-0"
          >
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <h5
                  class="tw-mb-3 tw-font-normal"
                >
                  Updates
                </h5>
              </div>
              <div
                class="tw-w-auto tw-flex-none tw-px-4"
              >
                <button
                  class="btn btn-outline-primary"
                  type="button"
                >
                  Check for updates
                </button>
              </div>
            </div>
            <p
              class="small text-muted"
            >
              Last update check performed:
               
              2017-02-03 13:41:36
            </p>
            <div
              class="toggle"
            >
              <label
                for="checkForUpdates"
              >
                <span
                  class="toggle-label"
                >
                  Check for updates at startup
                </span>
                <div
                  class="toggle-bar toggle-bar-primary-toggled"
                >
                  <input
                    aria-checked="true"
                    checked=""
                    id="checkForUpdates"
                    type="checkbox"
                  />
                  <span
                    class="toggle-handle toggle-handle-toggled toggle-handle-primary-toggled"
                  />
                </div>
              </label>
            </div>
          </div>
          <div
            class="tw-mt-4 tw-border tw-border-solid tw-border-black/10 tw-bg-white tw-p-5 first:tw-mt-0"
          >
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <h5
                  class="tw-mb-3 tw-font-normal"
                >
                  Usage statistics
                </h5>
              </div>
            </div>
            <div
              class="tw--mx-4 tw-flex tw-flex-row tw-flex-wrap"
            >
              <div
                class="tw-flex-1 tw-px-4"
              >
                <div
                  class="toggle"
                >
                  <label
                    for="checkForShare"
                  >
                    <span
                      class="toggle-label"
                    >
                      Collect anonymous usage data
                    </span>
                    <div
                      class="toggle-bar toggle-bar-primary"
                    >
                      <input
                        aria-checked="false"
                        id="checkForShare"
                        type="checkbox"
                      />
                      <span
                        class="toggle-handle toggle-handle-primary"
                        style="background-color: white;"
                      />
                    </div>
                  </label>
                </div>
              </div>
              <div
                class="tw-w-auto tw-flex-none tw-px-4"
              >
                <button
                  class="btn btn-outline-primary"
                  type="button"
                >
                  Show agreement
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
